--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!--PART 1 NAVIGATIOBN BAR-->
+    <!--NAVIGATIOBN BAR-->
     <div class="topnav" id="myTopnav">
         <a href="#home" class="active"><i class="fa-solid fa-film"></i>DRAMACOOL</a>
         <a href="#Home" class="reg"><i class="fa-sharp fa-solid fa-house"></i>Home</a>
@@ -19,7 +19,7 @@
         <a href="#search" class="reg"><i class="fa-solid fa-magnifying-glass"></i></i>Search</a>
     </div>
 
-    <!--PART 2 BANNER-->
+    <!--BANNER-->
     <div class="hero-image">
         <div class="hero-text">
             <h2>KOREABOOS</h2>
@@ -38,6 +38,30 @@
         <span>DRAMACOOL</span>
     </div>
 </div>
+<!--EMBEDDED VIDEOS-->
+ <section class="columns">
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/41bBDUp6jkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+    
+    <div class="videotext">
+        Descendants of the Sun - EP5 
+    </div>
+    </div>
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/op1QYwRAQpI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+    <div class="videotext">
+        Goblin - Stay With Me
+    </div>
+    </div>
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/RTaEGhWGzXE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div class="videotext">
+       Moon Lovers: Scarlet Heart Ryeo
+    </div>
+    </div>
+</section>
 
 </br>
 
