--- a/index.html
+++ b/index.html
@@ -44,7 +44,24 @@
 <br>
 <br>
 <br>
+<!-- FOOTER-->
 
+<footer id="footersection" style="background-color: #150159;">
+    <div class="footer-container" style="background-color: #2A363B;">
+        <div class="left-col">
+            <center><img src="kdrama.png" width="10%" height="10%" alt="lorie"></center>
+            <center><img src="dramacool.png" alt="Logo" class="logo"></center>
+            <center><div>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+    
+            </div></center>
+            <center><h4 style="color:#CAFBE7;">2022 MYWEBSITE BY:L.TOLENADA</h4></center>
+            
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
