--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
 
 </br>
 
+<section class="columns">
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/bwLtjKUEhGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+    <div class="videotext">
+        Legend of the blue sea - Finale 
+    </div>
+    </div>
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/iFyxffHNwvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
+    <div class="videotext">
+        W : Two Worlds Trailer
+    </div>
+    </div>
+    <div class="column">
+        <iframe width="100%" height="200px" src="https://www.youtube.com/embed/1BXSmZZtG2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div class="videotext">
+       Weightlifting Fairy
+    </div>
+    </div>
+</section>
+
 <br>
 <br>
 <br>
