--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <center><img src="dramacool.png" alt="Logo" class="logo"></center>
 
             <center><div>
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-square-twitter"></i></a>
     
             </div></center>
             <center><h4 style="color:#CAFBE7;">2022 MYWEBSITE BY:L.TOLENADA</h4></center>
